--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,14 @@
   /* other formats include: 'woff2', 'truetype, 'opentype',
                             'embedded-opentype', and 'svg' */
 }
+@font-face {
+  font-family: "Libre";
+  src:
+    local("Libre"),
+    url(../fonts/LibreBaskerville-Regular.ttf) format("woff2");
+  /* other formats include: 'woff2', 'truetype, 'opentype',
+                            'embedded-opentype', and 'svg' */
+}
 
 .main {
   font-family: "Maru";
