--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,20 +44,20 @@ html {
   font-style: normal;
   text-align: center;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 10px;
   color: rgb(8, 49, 0);
 }
 
 .header-text {
-  font-size: 40px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  font-size: 32px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   color: rgb(8, 49, 0);
 }
 
 .subtitle-text {
   color: rgb(8, 49, 0);
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .divider {
@@ -75,7 +75,7 @@ html {
 
 .cal-button {
   display: flex;
-  margin-top: 20px;
+  margin-top: 8px;
   justify-content: center; /* Vertically centers text */
   align-items: center; /* Horizontally centers text */
 }
@@ -86,8 +86,7 @@ html {
 }
 
 .invitations {
-  font-size: 16px;
-  margin-top: 16px;
+  font-size: 14px;
 }
 
 .script-text {
@@ -103,65 +102,25 @@ html {
   height: auto;
 }
 
-// @media (max-width: 1200px) {
-//   .venue-text,
-//   .date-text {
-//     font-size: 16px; // Adjust text size for mobile
-//   }
-//   .main-img {
-//     margin-top: 10px;
-//     width: 540px; /* you can use % */
-//     height: auto;
-//   }
-// }
-
-// @media (max-width: 992px) {
-//   .venue-text,
-//   .date-text {
-//     font-size: 18px; // Adjust text size for mobile
-//   }
-//   .main-img {
-//     margin-top: 10px;
-//     width: 540px; /* you can use % */
-//     height: auto;
-//   }
-// }
-
-// @media (max-width: 768px) {
-//   .venue-text,
-//   .date-text {
-//     font-size: 16px; // Adjust text size for mobile
-//   }
-//   .header-text,
-//   .script-text {
-//     font-size: 24px;
-//   }
-//   .header-text {
-//     margin-bottom: 10px;
-//   }
-//   .subtitle-text {
-//     font-size: 16px;
-//   }
-//   .main-img {
-//     margin-top: 10px;
-//     width: 540px; /* you can use % */
-//     height: auto;
-//   }
-//   .invitations {
-//     margin: 4px;
-//     font-size: 12px;
-//   }
-//   .cal-button {
-//     margin-top: 4px;
-//   }
-// }
-/* Mobile devices (portrait and landscape) */
-@media (max-width: 600px) {
-  .container {
-    padding: 10px;
+@media (max-width: 1200px) {
+  .venue-text,
+  .date-text {
+    font-size: 16px; // Adjust text size for mobile
   }
+  .main-img {
+    margin-top: 10px;
+    width: 540px; /* you can use % */
+    height: auto;
+  }
+  .invitations {
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 460px) and (max-width: 600px) {
   .header-text {
-    font-size: 1.5em;
+    font-size: 1.8em;
+    margin-bottom: 10px;
   }
   .subtitle-text {
     font-size: 1.2em;
@@ -171,42 +130,45 @@ html {
     height: auto;
   }
   .date-text {
-    font-size: 1em;
+    font-size: 1.2em;
   }
   .venue-address-text {
     font-size: 1em;
+  }
+  .venue-text {
+    margin-top: 10px;
   }
   .cal-button {
     margin-top: 10px;
   }
   .invitations {
     font-size: 1em;
+    margin-top: 0.2em;
   }
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
- .container {
-   padding: 20px;
- }
- .header-text {
-   font-size: 2em;
- }
- .subtitle-text {
-   font-size: 1.5em;
- }
- .main-img {
-   width: 100%;
-   height: auto;
- }
- .date-text {
-   font-size: 1.2em;
- }
- .venue-address-text {
-   font-size: 1em;
-   .cal-button {
+@media (min-width: 320px) and (max-width: 460px) {
+  .header-text {
+    font-size: 1.5em;
+  }
+  .subtitle-text {
+    font-size: 1em;
+  }
+  .main-img {
+    width: 100%;
+    height: auto;
+  }
+  .date-text {
+    font-size: 1em;
+  }
+  .venue-address-text {
+    font-size: 0.8em;
+  }
+  .cal-button {
     margin-top: 10px;
   }
   .invitations {
-    font-size: 1em;
+    font-size: 0.8em;
+    margin-top: 0.2em;
   }
 }
