--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,6 +36,7 @@ html {
   width: 100%; /* Make sure it spans full width */
   height: 100%; /* Make sure it spans full height */
 }
+
 .venue-text {
   display: flex;
   flex-direction: column;
@@ -44,20 +45,20 @@ html {
   font-style: normal;
   text-align: center;
   margin: auto;
-  margin-top: 10px;
+  margin-top: 20px;
   color: rgb(8, 49, 0);
 }
 
 .header-text {
-  font-size: 32px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  font-size: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   color: rgb(8, 49, 0);
 }
 
 .subtitle-text {
   color: rgb(8, 49, 0);
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .divider {
@@ -75,7 +76,7 @@ html {
 
 .cal-button {
   display: flex;
-  margin-top: 8px;
+  margin-top: 20px;
   justify-content: center; /* Vertically centers text */
   align-items: center; /* Horizontally centers text */
 }
@@ -86,8 +87,8 @@ html {
 }
 
 .invitations {
-  font-size: 14px;
-  margin-top: 2px;
+  font-size: 16px;
+  margin-top: 16px;
 }
 
 .script-text {
@@ -101,6 +102,58 @@ html {
   margin-top: 20px;
   width: 580px; /* you can use % */
   height: auto;
+}
+
+@media (max-width: 1600px) {
+  .header-text {
+    font-size: 32px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: rgb(8, 49, 0);
+  }
+
+  .subtitle-text {
+    color: rgb(8, 49, 0);
+    font-size: 18px;
+  }
+
+  .main-img {
+    margin-top: 10px;
+    width: 540px; /* you can use % */
+    height: auto;
+  }
+  .invitations {
+    font-size: 14px;
+    margin-top: 2px;
+  }
+  .venue-address-text {
+    color: rgb(8, 49, 0);
+    font-size: 16px;
+  }
+
+  .cal-button {
+    display: flex;
+    margin-top: 8px;
+    justify-content: center; /* Vertically centers text */
+    align-items: center; /* Horizontally centers text */
+  }
+
+  .date-text {
+    font-size: 20px;
+    color: rgb(8, 49, 0);
+  }
+
+  .invitations {
+    font-size: 14px;
+    margin-top: 2px;
+  }
+
+  .script-text {
+    font-family: "Sheffield";
+    color: rgb(8, 49, 0);
+    margin-top: -8px;
+    margin-bottom: -8px;
+  }
 }
 
 @media (max-width: 1200px) {
